[package]
authors = ["QWY_Games <info@qwy-games.ru>"]
edition = "2021"
name = "pypro_os"
version = "0.1.1"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "1.5"

[profile.release]
panic = "abort"

[[test]]
harness = false
name = "should_panic"

[[test]]
harness = false
name = "stack_overflow"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33
test-timeout = 30

[dependencies]
bootloader = {version = "0.9.29", features = ["map_physical_memory"]}
pc-keyboard = "0.7.0"
pic8259 = "0.11.0"
spin = "0.9.8"
uart_16550 = "0.3.1"
volatile = "0.3.0"
x86_64 = "0.14.12"
